cluster/apps/doleo/doleo-client/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doleo-client-staging
  namespace: doleo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.doleo.de"
      secretName: doleo.de
  rules:
    - host: test.doleo.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doleo-client-staging
                port:
                  number: 8080
